steps/2-demo-first-pol/appli-pod-latest.yaml
apiVersion: v1
kind: Pod
metadata:
  name: appli-latest
  namespace: appli
spec:
  containers:
  - name: appli-container
    image: nginx:latest
