steps/2-demo-first-pol/appli-pod-version.yaml
apiVersion: v1
kind: Pod
metadata:
  name: appli-version
  namespace: appli
spec:
  containers:
  - name: appli-container
    image: nginx:1.27.5
