steps/5-demo-kyverno-test/test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno-test
policies:
  - ../../2-demo-first-pol/kyv-pol-disable-latest.yaml
resources:
  - ../../2-demo-first-pol/appli-pod-latest.yaml
  - ../../2-demo-first-pol/appli-pod-version.yaml
  - ../../2-demo-first-pol/appli-deployment-version.yaml
results:
- policy: disallow-latest-tag
  rule: require-image-tag
  resources: 
  - appli-latest
  - appli-version
  kind: Pod
  result: pass
- policy: disallow-latest-tag
  rule: validate-image-tag
  resources: 
  - appli-latest
  kind: Pod
  result: fail
- policy: disallow-latest-tag
  rule: validate-image-tag
  resources: 
  - appli-version
  kind: Pod
  result: pass
- policy: disallow-latest-tag
  rule: validate-image-tag
  resources: 
  - appli-deployment
  kind: Deployment
  result: fail
